What's new...

Jul 31/2017 : JF 16.2.0 released
  - jfDataLogger/0.16
    - fix : another load/save issue

Jul 21/2017 : JF 16.1.0 released
  - jfControls/0.2
    - added support for including Java9 with MSI package (including compiler)
  - jfDataLogger/0.15
    - fix : load/save files properly

Jul 7/2017 : JF 16.0.0 released
  - new : jfControls
    - a software PLC with ladder logic and panels

Jul 4/2017 : JF 15.7.0 released
  - jPhoneLite/1.12
    - fixed help button
  - jfEdit/0.14
    - added more hotkeys and can edit EOL style

May 25/2017 : JF 15.6.0 released
  - jfDataLogger/0.14
    - new : bits are printed like a dotted line now with an offset 0-100

Apr 27/2017 : JF 15.5.0 released
  - fix : ffmpeg : no longer using deprecated AVStream.codec
    - compilation is now clean and quiet
  - jfDataLogger/0.12
    - fix : 'double' (float64) values were not scaling properly

Apr 26/2017 : jfAudio update
  - re-release jfAudio for last ffmpeg fix
    - jfAudio/0.16

Apr 25/2017 : JF 15.4.0 released
  - fixed ffmpeg decoding (discard unknown packets)
    - jfVideo/0.20
    - jfMedia/0.12

Apr 5/2017 : JF 15.3.0 released
  - fix : javaforce.controls.Controller : brought back S7 multi-tag reading (performance improvement)
    - jfDataLogger/0.11
    - jfDataLoggerPlus/0.7

Mar 30/2017 : JF 15.2.0 released!
  - fix : javaforce.controls.Controller.isConnected() was always returning false for NI devices
    - jfDataLogger/0.10
    - jfDataLoggerPlus/0.6

Mar 10/2017 : JF 15.1.0 released!
  - fix : javaforce.controls.Tag : NI is big endian
    - jfDataLogger/0.9
    - jfDataLoggerPlus/0.5

Mar 7/2017 : JF 15.0.0 released!
  - jfProjector/0.1
    - new app to projector your desktop to another desktop
  - ffmpeg : downloading on Windows can now goto %appdata% folder (no longer need admin access)
  - re-release ffmpeg based apps:
    - jfAudio/0.15
    - jfMedia/0.11
    - jfMusic/0.4
    - jfRecordCamera/0.4
    - jfRecordDesktop/0.5
    - jfVideo/0.19