@@ -5,7 +5,7 @@
   <property name="app2" value="jfdhcpsvc"/>
   <property name="apptype2" value="s"/>
   <property name="home" location="../.."/>
-  <property name="version" value="0.7"/>
+  <property name="version" value="0.8"/>
 
   <import file="../../base.xml"/>
 
