@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:fire="http://schemas.microsoft.com/wix/FirewallExtension">
-  <Product Id="*" UpgradeCode="{F6420D32-DDFA-42FB-A3A6-20A60EC9BED7}" Version="0.6" Language="1033" Name="jfProxy" Manufacturer="Peter Quiring">
+  <Product Id="*" UpgradeCode="{F6420D32-DDFA-42FB-A3A6-20A60EC9BED7}" Version="0.7" Language="1033" Name="jfProxy" Manufacturer="Peter Quiring">
     <Package InstallerVersion="300" Compressed="yes" InstallScope="perMachine" Platform="x64"/>
     <Media Id="1" Cabinet="files.cab" EmbedCab="yes" />
     <UIRef Id="WixUI_Minimal" />
