@@ -1,5 +1,12 @@
 What's new...
 
+Aug 4/2017 : JF 16.3.0 released
+  - jfDNS/0.6, jfDHCP/0.8, jfProxy/0.7, jfSTUN servers
+    - fixed configuration not updated
+  - jfDNS server
+    - fixed forwarding dns requests
+    - added allow/deny options
+
 Jul 31/2017 : JF 16.2.0 released
   - jfDataLogger/0.16
     - fix : another load/save issue
